--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <title>Block by Blockchain</title>
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="https://blockbyblockchain.com/favicon.ico">
+<link rel="shortcut icon" href="https://blockbyblockchain.github.io/favicon.ico">
 <!-- Bootstrap Core CSS -->
-<link rel="stylesheet" href="https://blockbyblockchain.com/css/bootstrap.min.css" type="text/css">
+<link rel="stylesheet" href="https://blockbyblockchain.github.io/css/bootstrap.min.css" type="text/css">
 <!-- Custom Fonts -->
 <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://blockbyblockchain.com/font-awesome/css/font-awesome.min.css" type="text/css">
+<link rel="stylesheet" href="https://blockbyblockchain.github.io/font-awesome/css/font-awesome.min.css" type="text/css">
 <!-- Plugin CSS -->
-<link rel="stylesheet" href="https://blockbyblockchain.com/css/animate.min.css" type="text/css">
+<link rel="stylesheet" href="https://blockbyblockchain.github.io/css/animate.min.css" type="text/css">
 <!-- Custom CSS -->
-<link rel="stylesheet" href="https://blockbyblockchain.com/css/creative.css" type="text/css">
-<link rel="stylesheet" href="https://blockbyblockchain.com/css/modals.css" type="text/css">
+<link rel="stylesheet" href="https://blockbyblockchain.github.io/css/creative.css" type="text/css">
+<link rel="stylesheet" href="https://blockbyblockchain.github.io/css/modals.css" type="text/css">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -251,16 +251,16 @@
         
 
         <!-- jQuery -->
-<script src="https://blockbyblockchain.com/js/jquery.js"></script>
+<script src="https://blockbyblockchain.github.io/js/jquery.js"></script>
 <!-- Bootstrap Core JavaScript -->
-<script src="https://blockbyblockchain.com/js/bootstrap.min.js"></script>
+<script src="https://blockbyblockchain.github.io/js/bootstrap.min.js"></script>
 <!-- Plugin JavaScript -->
-<script src="https://blockbyblockchain.com/js/jquery.easing.min.js"></script>
-<script src="https://blockbyblockchain.com/js/jquery.fittext.js"></script>
-<script src="https://blockbyblockchain.com/js/wow.min.js"></script>
+<script src="https://blockbyblockchain.github.io/js/jquery.easing.min.js"></script>
+<script src="https://blockbyblockchain.github.io/js/jquery.fittext.js"></script>
+<script src="https://blockbyblockchain.github.io/js/wow.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="https://blockbyblockchain.com/js/creative.js"></script>
+<script src="https://blockbyblockchain.github.io/js/creative.js"></script>
 
 
         
